--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Parse TaiShin @gogo creditcard billing statement",
   "main": "index.js",
   "scripts": {
-    "watch": "./patch.sh && NODE_ENV=development parcel --global lib --https --open index.html ",
-    "build": "NODE_ENV=production parcel build index.html --global lib --no-minify --public-url ./"
+    "watch": "./patch.sh && NODE_ENV=development parcel --global lib --https --open index.html",
+    "build": "NODE_ENV=production parcel build index.html --global lib --no-minify -d ./doc --public-url /GoGoParser"
   },
   "repository": {
     "type": "git",
