--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Parse TaiShin @gogo creditcard billing statement",
   "main": "index.js",
   "scripts": {
-    "watch": "./patch.sh && NODE_ENV=development parcel --global lib --https --open index.html",
+    "watch": "./patch.sh && NODE_ENV=development parcel --global lib --open index.html",
     "build": "NODE_ENV=production parcel build index.html --global lib --no-minify -d ./doc --public-url /GoGoParser"
   },
   "repository": {
