--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "./patch.sh && NODE_ENV=development parcel --global lib --open index.html",
-    "build": "NODE_ENV=production parcel build index.html --global lib --no-minify -d ./doc --public-url /GoGoParser"
+    "build": "NODE_ENV=production parcel build index.html --global lib --no-minify -d ./docs --public-url /GoGoParser"
   },
   "repository": {
     "type": "git",
